# python-encode

./: .gitignore  README.md  custom_objects.py  main.cmd  main.py  main_window.ui  modules.py  objects.py  preference.json  pyproject.toml  python_encode_main_window.ui  requirement.txt  requirement_cli.txt  requirement_dev.txt  requirement_gui.txt  setup.cfg  ssa_utils.py  todo.md  utils.py
presets/: container_and_codecs.json  my_encode_profile_av1_10bit_720p_opus.json  my_encode_profile_h265_10bit_1080p_opus.json  my_encode_profile_h265_10bit_720p_opus.json  ssa_profile_h265_8bit_1080p_aac.json  to future me - NEW SOLUTION FOR PRESETS IS NEEDED.txt
presets/h264-aac-1080p/: basic.json  extra_param.txt  naming.txt
presets/h265-10bit-opus/: basic.json  extra_param.txt  naming.txt
presets/h265-10bit-opus-720p/: basic.json  extra_param.txt
presets/ssa-h265-aac-1080p/: basic.json  extra_param.txt
src/python_encode/: anime_processor.py  custom_objects.py  error.py  main.py  main_deprecating.py  main_gui.py  modules_deprecating.py  modules_qt.py  rename_deprecating.py  settings.py  utils.py  utils_deprecating.py  utils_qt.py  utils_site_package.py
src/python_encode/language/: language.ts  language_test.ts  language_zh.qm
src/python_encode/ui/: app_settings_widget.ui  controler_main_window.py  controller_app_settings_widget.py  controller_encoder_settings_wigdet.py  controller_source_info_widget.py  controller_source_loading_dialog.py  controller_source_loading_overlay.py  encoder_settings_widget.ui  language.py  main_window.ui  model.py  model_encoder_settings.py  (+14 more)
