[metadata]
name = python_encode
version = 0.0.1
description = Anime encode tool by Blake57 with SSA's recipie
author = Blake57
license = GPLv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    python_encode
    python_encode.ui
    python_encode.language
install_requires =
    about-time>=4
    alive-progress>=3
    coloredlogs>=15
    future>=0.18
    grapheme>=0.6
    humanfriendly>=10
    about-time>=4.2.1
    alive-progress>=3.0.1
    coloredlogs>=15.0.1
    packaging>=23.0
    PySide6>=6.2.4
    shiboken6>=6.2.4
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
python_encode = py.typed
python_encode.language = *.qm

[flake8]
max-line-length = 160